# DFA

./: CMakeLists.txt  README.md  automat.rar
src/: Assets.h  Constants.h  Node.cpp  Node.h  Pass.cpp  Pass.h  StageManager.cpp  StageManager.h  TextureManager.cpp  TextureManager.h  UI.cpp  UI.h  main.cpp
src/assets/: cm.txt
